--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Get Redux</title>
-        <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-    </head>
-    <body>
-        <div id="app"></div>
-        <script type="text/javascript" src="dist/bundle.js"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Get Redux</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500'
+          rel='stylesheet' type='text/css'>
+</head>
+<body>
+<div id="app"></div>
+<script type="text/javascript" src="dist/bundle.js"></script>
+</body>
 </html>
