[UP] : react mounting point

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
           rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div id="app"></div>
+<div id="mount-point"></div>
 <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
